<resources>
    <string name="app_name">KalkulatorRPN</string>
    <string name="stack">stack</string>
    <string name="pick_color">Pick color</string>
    <string name="change_precision">Change precision</string>
    <string name="firstPrec">0.0</string>
    <string name="secondPrec">0.00</string>
    <string name="thirdPrec">0.000</string>
    <string name="fourthPrec">0.0000</string>
    <string name="fifthPrec">0.00000</string>
    <string name="sixthPrec">0.000000</string>
    <string name="seventhPrec">0.0000000</string>
    <string name="eighthPrec">0.00000000</string>
</resources>
