<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/change_precision"
        android:title="@string/change_precision"
        android:visible="true"
        app:showAsAction="never"
        >
        <menu >
            <item
                android:id="@+id/subitem1"
                android:title="@string/firstPrec"
                android:visible="true"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/subitem2"
                android:title="@string/secondPrec"
                android:visible="true"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/subitem3"
                android:title="@string/thirdPrec"
                android:visible="true"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/subitem4"
                android:title="@string/fourthPrec"
                android:visible="true"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/subitem5"
                android:title="@string/fifthPrec"
                android:visible="true"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/subitem6"
                android:title="@string/sixthPrec"
                android:visible="true"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/subitem7"
                android:title="@string/seventhPrec"
                android:visible="true"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/subitem8"
                android:title="@string/eighthPrec"
                android:visible="true"
                app:showAsAction="never"
                />
        </menu>
    </item>

    <item
        android:id="@+id/pick_color"
        android:title="@string/pick_color"
        android:visible="true"
        app:showAsAction="never"
        />
</menu>